adicionado swagger, endpoints completos, pendente testes unitarios

--- a/src/storeBooks.api/storeBooks.api/appsettings.json
+++ b/src/storeBooks.api/storeBooks.api/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ExchangeApiConfs": {
+    "ExchageToken": "0300e309aadf9ea899cdfe37f250a6ab",
+    "UrlBase": "http://api.exchangeratesapi.io/v1"
+  }
 }
