--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -23,10 +23,10 @@ jobs:
       run: dotnet restore ./src/storeBooks.api/storeBooks.api/
    
     - name: Build
-      run: dotnet build --configuration Release --no-restore
+      run: dotnet build --configuration Release --no-restore ./src/storeBooks.api/storeBooks.api/
     
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test --no-build --verbosity normal ./src/storeBooks.api/storeBooks.api/
     
     - name: Publish
       run: dotnet publish -c Release -o '${{ github.workspace }}/out'
