--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -29,7 +29,7 @@ jobs:
       run: dotnet test --no-build --verbosity normal ./src/storeBooks.api/storeBooks.api/
     
     - name: Publish
-      run: dotnet publish -c Release -o ./src/storeBooks.api/storeBooks.api/
+      run: dotnet publish
       
     - name: Zip Package
       run: |
