--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -29,7 +29,10 @@ jobs:
       run: dotnet test --no-build --verbosity normal ./src/storeBooks.api/storeBooks.api/
     
     - name: Publish
-      run: dotnet publish ./src/storeBooks.api/storeBooks.api/
+      run: |
+        cd ./src/storeBooks.api/storeBooks.api/
+        mkdir out 
+        dotnet publish out
       
     - name: Zip Package
       run: |
