--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -42,6 +42,7 @@ jobs:
         aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
         application_name: store-books
+        environment_name: Storebooks-env
         region: us-east-2
         version_label: ${{ github.run_id }}
         version_description: ${{ github.sha }}
